# release_eng

./: AUTHORS  CHANGELOG.md  Cargo.toml  EXAMPLE_CHANGELOG.md  README.md
.cargo/: config.toml
.github/: copyright.sh  pull_request_template.md
.github/workflows/: ci.yml
changelog-to-release/: Cargo.toml
changelog-to-release/src/: main.rs
changelog_to_release/: Cargo.toml
changelog_to_release/src/: main.rs
examples/test-package/: CHANGELOG.md  Cargo.toml
examples/test-package/src/: lib.rs
examples/test_package/: CHANGELOG.md  Cargo.toml
examples/test_package/src/: lib.rs
git-changelog/: Cargo.toml
git-changelog/src/: apply.rs  coauthors.rs  collect.rs  extract.rs  lib.rs  main.rs  merge.rs  process.rs
git_changelog/: Cargo.toml  README.md
git_changelog/src/: apply.rs  coauthors.rs  collect.rs  extract.rs  lib.rs  merge.rs  process.rs
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
