[package]
name = "git_changelog"
version = "0.1.0"
description = "Use metadata in GitHub PR descriptions to draft a changelog."
keywords = ["changelog", "github"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
